# transferX

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  file_metadata.rs  main.rs  protocol.rs  receiver.rs  sender.rs  utils.rs
