[package]
name = "transferx"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
indicatif = "0.17.11"
local-ip-address = "0.6.3"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
